force-app/main/default/objects/Demo_Event__e/Demo_Event__e.object-meta.xml
<CustomObject>
    <description>Data-plane Platform Event for Skywave Interactive. Published by Apex REST endpoints from the consumer site. Consumed by the monitor LWC ONLY (the WS relay does not subscribe — phones don't care what other phones did). Type discriminator: session_started, survey_answer, profile_created, race_tick. New types are added by extending the Type__c values, not by creating new channels.</description>
    <label>Demo Event</label>
    <pluralLabel>Demo Events</pluralLabel>
</CustomObject>