force-app/main/default/objects/Demo_Event__e/fields/Demo_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Demo_Session_Id__c</fullName>
    <label>Demo Session Id</label>
    <description>The Demo_Session__c run this event belongs to. Lets the monitor filter to the active run.</description>
    <type>Text</type>
    <length>18</length>
    <required>true</required>
</CustomField>