force-app/main/default/objects/Demo_Event__e/fields/Payload_Json__c.field-meta.xml
<CustomField>
    <fullName>Payload_Json__c</fullName>
    <label>Payload Json</label>
    <description>JSON-serialized type-specific payload. Schema by Type__c: session_started -> {user_agent}; survey_answer -> {question_key, answer_key}; profile_created -> {contact_id, display_name, avatar_url}; race_tick -> {intensity, t}.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>