force-app/main/default/objects/Demo_Event__e/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <label>Session Id</label>
    <description>Per-phone UUID. Lets the monitor attribute the event to a specific audience member.</description>
    <type>Text</type>
    <length>64</length>
    <required>true</required>
</CustomField>