force-app/main/default/objects/Demo_Event__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <description>Event type discriminator: session_started, survey_answer, profile_created, race_tick. Plain text (not picklist) so Apex can publish new types without metadata changes.</description>
    <type>Text</type>
    <length>32</length>
    <required>true</required>
</CustomField>